[package]
name = "fs_mod_parser_neon"
version = "0.1.0"
description = "Neon bindings for fs_mod_parser"
authors = ["JTSage <jtsage@gmail.com>"]
license = "ISC"
edition = "2021"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fs_mod_parser = "0.1.5"
neon = "1"
